# oopetris_wrapper_c

./: README.md  conanfile.py  gcovr.cfg  meson.build  meson.options
.github/workflows/: build.yml  ci.yml  test.yml
example/: main.c  meson.build
src/: meson.build  oopetris_wrapper.h  opaque_types.h  wrapper.cpp
src/c_wrapper/: meson.build  opaque_types.h  windows.h  wrapper.cpp  wrapper.h
tests/: get_recording_information.c  information.c  is_recording_file.c  malloc_tests.c  meson.build  stb_ds.c
tests/files/: example.rec  example.rec_text
tests/mocks/: malloc_mock.c  malloc_mock.h
tools/dependencies/: meson.build
tools/options/: meson.build
