option(
    'tests',
    type: 'boolean',
    value: false,
    description: 'whether or not tests should be built',
)

option(
    'tests_use_tap',
    type: 'boolean',
    value: true,
    description: 'whether or not use tap to run the tests, it doesn\'t print the error message in case of an error, but otherwise it is better than the alternative',
)

option(
    'example',
    type: 'boolean',
    value: false,
    description: 'whether or not the example should be built',
)

option(
    'clang_libcpp',
    type: 'feature',
    value: 'auto',
    description: 'if using clang, build with libc++ instead of libstdc++ (gcc stdlib)',
)
